--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -4,7 +4,7 @@ path:
   eval_csv_path: "/path/to/eval.csv"
   image_dir: None
   save_dir: "../outpus/checkpoints"
-  resume_from_checkpoint: 'epoch_2/checkpoint_epoch2.pt' # Or "/path/to/checkpoint.pt"
+  resume_from_checkpoint: null # Or "/path/to/checkpoint.pt"
 
 # -- Datasets --
 dataset:
@@ -25,8 +25,8 @@ model:
 
 # -- Training arguments --
 training:
-  num_epochs: 4
-  batch_size: 4
+  num_epochs: 10
+  batch_size: 8
   learning_rate: 1e-5
   weight_decay: 0.01
   warmup_ratio: 0.1
