--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ torch @ https://download.pytorch.org/whl/cu124/torch-2.6.0%2Bcu124-cp311-cp311-l
 torchvision @ https://download.pytorch.org/whl/cu124/torchvision-0.21.0%2Bcu124-cp311-cp311-linux_x86_64.whl
 tqdm==4.67.1
 transformers==4.51.3
+ipykernel==6.29.5
 
 
 
