--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -3,7 +3,9 @@ path:
   train_csv_path: "/path/to/train.csv"
   eval_csv_path: "/path/to/eval.csv"
   image_dir: None
-  save_dir: "../outpus/checkpoints"
+  save_dir: "../outputs/checkpoints"
+  stage1_checkpoint: "../outputs/checkpoints/ImageCaptioning-stage1/epoch9/checkpoint_epoch9.pt"
+  stage2_checkpoint: "../outputs/checkpoints/ImageCaptioning-stage2/epoch20/checkpoint_epoch920pt"
   resume_from_checkpoint: null # Or "/path/to/checkpoint.pt"
 
 # -- Datasets --
@@ -11,6 +13,9 @@ dataset:
   cocoCaption: "lmms-lab/COCO-Caption" # Only use 'val'
   flickr: "lmms-lab/flickr30k"
   llava: "lmms-lab/LLaVA-ReCap-558K"
+  vqav2: "lmms-lab/VQAv2"
+  okvqa: "lmms-lab/OK-VQA"
+  gqa: ["lmms-lab/GQA", ["train_balanced_images", "train_balanced_instructions"]] # train_balanced_instructions, train_balanced_images
 
 # -- Model Configuration --
 model:
@@ -28,11 +33,11 @@ model:
 # -- Training arguments --
 training:
   num_epochs: 10
-  batch_size: 4
+  batch_size: 64
   learning_rate: 1e-5
   weight_decay: 0.01
   warmup_ratio: 0.1
-  tokenizer_max_length: 256
+  tokenizer_max_length: 128
 
 hf:
   repo_id: 'DRPARKSTREET/BLIP2_PHI1.5'
