--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -4,6 +4,8 @@ path:
   eval_csv_path: "/path/to/eval.csv"
   image_dir: None
   save_dir: "../outputs/checkpoints"
+  instruct_df: "../datasets/llava_instruct_150k.json"
+  coco2017: "../datasets/coco2017"
   stage1_checkpoint: "../outputs/checkpoints/ImageCaptioning-stage1/epoch9/checkpoint_epoch9.pt"
   stage2_checkpoint: "../outputs/checkpoints/ImageCaptioning-stage2/epoch20/checkpoint_epoch920pt"
   resume_from_checkpoint: null # Or "/path/to/checkpoint.pt"
@@ -18,6 +20,7 @@ dataset:
   okvqa: "lmms-lab/OK-VQA"
   gqa: ["lmms-lab/GQA", ["train_balanced_images", "train_balanced_instructions"]] # train_balanced_instructions, train_balanced_images
   llavaNext: "lmms-lab/LLaVA-NeXT-Data"
+  instruct150: "liuhaotian/LLaVA-Instruct-150K"
   scienceQA: "derek-thomas/ScienceQA"
   visual7w: "nimapourjafar/mm_visual7w"
 
@@ -38,7 +41,7 @@ model:
 training:
   num_epochs: 50
   batch_size: 64
-  learning_rate: 1e-5
+  learning_rate: 2e-5
   weight_decay: 0.01
   warmup_ratio: 0.1
   tokenizer_max_length: 128
