--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -5,7 +5,7 @@ path:
   image_dir: None
   save_dir: "../outputs/checkpoints"
   instruct_df: "../datasets/llava_instruct_150k.json"
-  coco2017: "../datasets/coco2017"
+  coco2014: "../datasets/train2014"
   stage1_checkpoint: "../outputs/checkpoints/ImageCaptioning-stage1/epoch9/checkpoint_epoch9.pt"
   stage2_checkpoint: "../outputs/checkpoints/ImageCaptioning-stage2/epoch20/checkpoint_epoch920pt"
   resume_from_checkpoint: null # Or "/path/to/checkpoint.pt"
